# camera-backup

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini
src/camera_backup/: __init__.py  camera-uploader.service  config.yaml  generate_services.py  install.py  uploader.py
tests/: test_generate_services.py  test_integration.py  test_uploader.py
